--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -1,9 +1,4 @@
-/*!
- * Bootstrap v4.0.0-beta (https://getbootstrap.com)
- * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
+
 @media print {
   *,
   *::before,
@@ -8212,5 +8207,38 @@ a.text-dark:focus, a.text-dark:hover {
 
 .invisible {
   visibility: hidden !important;
+  .dropbtn{
+            color:white;
+            border:none;
+            display: inline;
+            background: pink;
+
+
+        }.dropdown{
+            display: inline-block;
+
+        }
+        .dropdown-content{
+            display: none;
+            position: absolute;
+            min-width: 146px;  
+
+
+        }
+        .dropdown-content a {
+            color:white;
+            padding: 20px 20px;
+            display: block;
+            background: grey;
+
+        }.dropdown-content a:hover {background-color:}
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown:hover .dropbtn {
+            background: black;
+        }
 }
 /*# sourceMappingURL=bootstrap.css.map */
